@@ -17,6 +17,7 @@ Changes in 3.2.1 :
 - Prevent torrent from start when torrent is opened user controlled and not started and ktorrent is restarted
 - Use IPv6 :: (all interfaces) address to bind to when interface is not specified
 - Make sure QM can be edited when queue is paused
+- Fix bug causing network interface not to be set when server was initialized
 
 Changes in 3.2 :
 - Use QDir to create directories, avoids nested event loops, which seems to be buggy in some situations (182327)
